feat: add and align profile header image

--- a/index.html
+++ b/index.html
@@ -15,11 +15,16 @@
         <div id="header">
             <div class="search-bar"><input type="search"></div>
             <div class="user-section mt">
-                <p><b>Hi there,</b></p>
-                <p><strong>John Doe (@JohnDoe)</strong></p>
+                <div><img src="avatar.png" alt="">
+                    <div class="user-intro">
+                        <span>
+                            <p>Hi there,</p>
+                        </span>
+                        <p>John Doe (@JohnDoe)</p>
+                    </div>
+                </div>
             </div>
             <div class="user-profile">
-                <p>John Doe</p>
             </div>
             <div class="buttons">
                 <button>New</button>
@@ -45,10 +50,8 @@
                     <li>Privacy</li>
                 </b>
             </ul>
-
         </div>
     </div>
-
 
 </body>
 
