feat: add profile button

--- a/index.html
+++ b/index.html
@@ -12,26 +12,6 @@
 
 <body id="main">
     <div id="container">
-        <div id="header">
-            <div class="search-bar"><input type="search"></div>
-            <div class="user-section mt">
-                <div><img src="avatar.png" alt="">
-                    <div class="user-intro">
-                        <span>
-                            <p>Hi there,</p>
-                        </span>
-                        <p>John Doe (@JohnDoe)</p>
-                    </div>
-                </div>
-            </div>
-            <div class="user-profile">
-            </div>
-            <div class="buttons">
-                <button>New</button>
-                <button>Upload</button>
-                <button>Share</button>
-            </div>
-        </div>
 
         <div id="sidebar">
             <ul>
@@ -51,7 +31,36 @@
                 </b>
             </ul>
         </div>
-    </div>
+
+        <div id="header">
+            <div class="search-bar"><input type="search"></div>
+            <div class="user-section mt">
+                <div><img src="avatar.png" alt="">
+                    <div class="user-intro">
+                        <span>
+                            <p>Hi there,</p>
+                        </span>
+                        <p>John Doe (@JohnDoe)</p>
+                    </div>
+                </div>
+            </div>
+
+
+
+            <div class="buttons">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
+            </div>
+
+            <div class="user-profile profile mt">
+                <div><img src="avatar.png" alt="">
+                    <div class="user-intro">
+                        <p>John Doe</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 </body>
 
