feat: add projects grid

--- a/index.html
+++ b/index.html
@@ -12,23 +12,20 @@
 
 <body id="main">
     <div id="container">
-
         <div id="sidebar">
             <ul>
-                <b>
-                    <span class="dashboard-main">
-                        <li>Dashboard</li>
-                    </span>
-                    <li>Home</li>
-                    <li>Profile</li>
-                    <li>Messages</li>
-                    <li>History</li>
-                    <li>Tasks</li>
-                    <li>Communities</li>
-                    <li>Settings</li>
-                    <li>Support</li>
-                    <li>Privacy</li>
-                </b>
+                <span class="dashboard-main">
+                    <li>Dashboard</li>
+                </span>
+                <li>Home</li>
+                <li>Profile</li>
+                <li>Messages</li>
+                <li>History</li>
+                <li>Tasks</li>
+                <li>Communities</li>
+                <li>Settings</li>
+                <li>Support</li>
+                <li>Privacy</li>
             </ul>
         </div>
 
@@ -46,11 +43,60 @@
             </div>
 
 
-
             <div class="buttons">
                 <button>New</button>
                 <button>Upload</button>
                 <button>Share</button>
+            </div>
+
+            <div>
+                <span>
+                    <h1 style="margin-top: 30px; margin-bottom: 20px;">Your Projects</h1>
+                </span>
+                <div id="projects-grid">
+                    <div>
+                        <h1>Super Cool Project 1</h1>
+                        <div>
+                            <p>Text just to fill the screen text just to fill the screen text just to fill the screen
+                                text just to fill the screen </p>
+                        </div>
+                    </div>
+                    <div>
+                        <h1>Super Cool Project 2</h1>
+                        <div>
+                            <p>Text just to fill the screen text just to fill the screen text just to fill the screen
+                                text just to fill the screen </p>
+                        </div>
+                    </div>
+                    <div>
+                        <h1>Super Cool Project 3</h1>
+                        <div>
+                            <p>Text just to fill the screen text just to fill the screen text just to fill the screen
+                                text just to fill the screen </p>
+                        </div>
+                    </div>
+                    <div>
+                        <h1>Super Cool Project 4</h1>
+                        <div>
+                            <p>Text just to fill the screen text just to fill the screen text just to fill the screen
+                                text just to fill the screen </p>
+                        </div>
+                    </div>
+                    <div>
+                        <h1>Super Cool Project 5</h1>
+                        <div>
+                            <p>Text just to fill the screen text just to fill the screen text just to fill the screen
+                                text just to fill the screen </p>
+                        </div>
+                    </div>
+                    <div>
+                        <h1>Super Cool Project 6</h1>
+                        <div>
+                            <p>Text just to fill the screen text just to fill the screen text just to fill the screen
+                                text just to fill the screen </p>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="user-profile profile mt">
@@ -61,6 +107,12 @@
                 </div>
             </div>
         </div>
+    </div>
+
+
+
+
+
 
 </body>
 
