feat: add icons

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="globals.css">
     <script src="main.js" defer></script>
+    <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
 </head>
 
 <body id="main">
@@ -15,22 +16,24 @@
         <div id="sidebar">
             <ul>
                 <span class="dashboard-main">
-                    <li>Dashboard</li>
+                    <li><span class="iconify" data-icon="ci:dashboard"></span>Dashboard</li>
                 </span>
-                <li>Home</li>
-                <li>Profile</li>
-                <li>Messages</li>
-                <li>History</li>
-                <li>Tasks</li>
-                <li>Communities</li>
-                <li>Settings</li>
-                <li>Support</li>
-                <li>Privacy</li>
+                <li><span class="iconify" data-icon="ci:home-alt-fill"></span>Home</li>
+                <li><span class="iconify" data-icon="icomoon-free:profile"></span>Profile</li>
+                <li><span class="iconify" data-icon="bxs:message" data-flip="horizontal"></span>Messages</li>
+                <li><span class="iconify" data-icon="bxs:time-five"></span>History</li>
+                <li><span class="iconify" data-icon="clarity:tasks-solid"></span>Tasks</li>
+                <li><span class="iconify" data-icon="fluent:people-community-28-filled"></span>Communities</li>
+                <li><span class="iconify" data-icon="ci:settings-filled"></span>Settings</li>
+                <li><span class="iconify" data-icon="ic:baseline-help-center"></span>Support</li>
+                <li><span class="iconify" data-icon="ant-design:safety-certificate-filled"></span>Privacy</li>
             </ul>
         </div>
 
         <div id="header">
-            <div class="search-bar"><input type="search"></div>
+
+            <div class="search-bar"><span class="iconify" data-icon="ant-design:search-outlined"></span><input
+                    type="search"></div>
             <div class="user-section mt">
                 <div><img src="avatar.png" alt="">
                     <div class="user-intro">
